# Obsidian_AI_Assistant

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  PROJECT_STRUCTURE.md  README.md  config.yaml  pyproject.toml  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/badges/: config.json  coverage.json  python.json  status.json  tests.json
.github/workflows/: codeql.yml  lint.yml  release.yml  security.yml  tests.yml
docs/ARCHIVE/: BUG_LOG.md  CHANGE_REQUEST_LOG.md  DEMO_SCRIPT.md  LESSONS_LEARNED.md  MONITORING_CHECKLIST.md  MVP_COMPLETION_REPORT.md
src/: __init__.py  __main__.py  main.py
src/chat/: __init__.py  loop.py  orchestrator.py
src/ollama/: __init__.py  client.py  stream.py
src/vault/: __init__.py  retriever.py  writer.py
src/voice/: __init__.py  processor.py
tests/: __init__.py  conftest.py  run_tests.py  test_ollama_client.py  test_orchestrator.py  test_vault_retriever.py  test_vault_writer.py
