[metadata]
name = cornelius-ollama
version = 0.1.0
description = CLI-first Obsidian AI Assistant with Ollama, BM25, and Whisper
long_description = file: README.md
long_description_content_type = text/markdown
author = Claude Code
author_email = claude-code@anthropic.com
license = MIT
url = https://github.com/cornelius-ollama/cornelius
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
packages = find:
python_requires = >=3.11
install_requires =
    rank-bm25>=0.2.2
    python-frontmatter>=1.1.0
    requests>=2.31.0
    pyyaml>=6.0.1
    python-dotenv>=1.0.0
    rich>=13.7.0
    click>=8.1.7

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-cov>=4.1.0
    black>=23.0.0
    flake8>=6.0.0
    mypy>=1.0.0

[options.entry_points]
console_scripts =
    cornelius = src.main:main

[bdist_wheel]
universal = false

[check]
metadata = true
restructuredtext = true